# MLutilities

./: .coverage  .gitignore  .pre-commit-config.yaml  EDA.py  README.md  pyproject.toml  setup.py
.code_quality/: .flake8
.github/workflows/: pypi-publish.yml
Classification/: metrics.py
MLutilities/: EDA.py  feature_selection.py  utils.py
MLutilities/.ipynb_checkpoints/: EDA-checkpoint.py
MLutilities/Classification/: classification_widgets.py  metrics.py  metrics_data.pkl
MLutilities/Clustering/: clustering_widgets.py  utils.py
MLutilities/EDA/: EDA.py  __init__.py  eda_widgets.py  widgets.py
MLutilities/Regression/: regression_widgets.py  widgets.py
MLutilities/classification/: plots.py  widgets.py
MLutilities/data/: build_metrics.py
MLutilities/datasets/: USvideos.parquet  __init__.py  airline_passenger_satisfaction.parquet  cars.pkl  cars_nulls.pkl  diamonds.pkl  load_data.py  material_precios.parquet  nyc_accidents.parquet  nyc_property_sales.parquet  nyc_property_sales_2.parquet  penguins.pkl  taxis.parquet  taxis_v2.parquet
MLutilities/datasets/.ipynb_checkpoints/: load_data-checkpoint.py
MLutilities/model_selection/: plots.py
MLutilities/preprocessing/: impute.py  preprocessing.py  preprocessing_widgets.py  utils.py
MLutilities/regression/: __init__.py  models.py  plots.py  regression_widgets.py  utils.py
MLutilities/stats/: distributions.py  widgets.py
datasets/: diamonds.pkl  load_data.py
mlutilities/: feature_selection.py  utils.py
mlutilities/Classification/: classification_widgets.py  metrics.py
mlutilities/Clustering/: clustering_widgets.py
mlutilities/Regression/: regression_widgets.py
mlutilities/classification/: classification_widgets.py  plots.py
mlutilities/datasets/: load_data.py  nba.csv  taxis.parquet  transaccion.parquet
mlutilities/eda/: __init__.py  eda.py  eda_widgets.py  multivariant.py  multivariant_widget.py  univariant.py  univariant_widget.py
mlutilities/model_selection/: __init__.py
mlutilities/preprocessing/: impute.py  outlier.py  preprocessing.py  preprocessing_widgets.py  utils.py
mlutilities/regression/: models.py  plots.py  regression_widgets.py
mlutilities/stats/: distributions.py  widgets.py
notebooks/: arrhythim.ipynb  penguins.ipynb
tests/eda/: test_univariant.py
(+12 files in other folders)
