[tool.poetry]
name = "MLutilities_udea"
version = "0.0.2"
description = "Library to teach Machine Learning"
authors = ["omarcastano <omar.castano@udea.edu.co>", "deoache <daniel.ocampoh@udea.edu.co>"]
packages = [
    {include = "MLutilities"}
]
readme = "README.md" 

[tool.poetry.dependencies]
python = ">=3.8.5, <=3.11.0"
statsmodels = "^0.13.2"
plotly = "^5.10.0"
scikit-plot = "^0.3.7"
yellowbrick = "^1.5"
mlxtend = ">=0.19.0"
numpy = "^1.21.6"
lofo-importance = "^0.3.2"
feature-engine = "1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
