[tool.poetry]
name = "MLutilities_udea"
version = "0.0.8"
description = "Library to teach Machine Learning"
authors = ["omarcastano <omar.castano@udea.edu.co>", "deoache <daniel.ocampoh@udea.edu.co>"]
packages = [
    {include = "mlutilities"}
]
readme = "README.md" 

[tool.poetry.dependencies]
python = ">=3.9.0, <=3.11.0"
seaborn = "^0.13.0"
statsmodels = "^0.14.0"
plotly = "^5.18.0"
mlxtend = "^0.23.0"
yellowbrick = "^1.5"
ipywidgets = "^8.1.1"
nbformat = "^5.9.2"
scikit-plot = "^0.3.7"
lofo-importance = "^0.3.3"
feature-engine = "^1.6.2"
jinja2 = "^3.1.2"
pandas = "<2.0.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"